fixed bug on firefox cardface not showing needed backface-hidden on card image not just card

--- a/src/styles/CardAnimate.css
+++ b/src/styles/CardAnimate.css
@@ -63,6 +63,7 @@
   object-fit: cover; 
   border-radius: 10px; 
   display: block;    
+  backface-visibility: hidden; 
 }
 .card-front,
 .card-back {
@@ -89,5 +90,4 @@
 .card-back img {
   border-radius: 10px;
 }
-
 
